# media_downloader

./: .gitignore  LICENSE  README.md  alembic.ini  data.json  docker-compose.yml  main.py  pyproject.toml  uvicorn_conf.py
api/controllers/: download.py
api/query/: db_connection.py  download.py
api/routes/: download.py  main.py
db/: base.py  session.py
db/models/: models.py
migrations/: env.py
migrations/versions/: abe28b561564_basic_functional_system.py  bace57d7e093_fulltitle_field_to_download_model.py  dc5c729a0eaa_add_youtube_id_title_uploader_channel_.py
schemas/: download.py
tests/: api_client.py
utils/: main.py
youtbe_downloader/: downloader.py
