[tool.poetry]
name = "youtbe-downloader"
version = "0.1.0"
description = ""
authors = ["Christian Tarifeno <christiantarifer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2024.12.3"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
pytest = "^8.3.4"
poetry-plugin-export = "^1.8.0"
sqlalchemy = "^2.0.36"
mysql-connector-python = "^9.1.0"
pytz = "^2024.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
